<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/size_275dp"
        android:layout_height="@dimen/size_150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/mc_payment_bg_r8_shadow1">

        <TextView
            android:id="@+id/payment_confirm_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_60dp"
            android:gravity="center"
            android:paddingLeft="@dimen/size_8dp"
            android:paddingRight="@dimen/size_8dp"
            android:layout_marginTop="@dimen/size_15dp"
            android:text="@string/payment_browser_confirm_title"
            android:textColor="#333333"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/payment_confirm_view1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_0.5dp"
            android:layout_marginLeft="@dimen/size_2dp"
            android:layout_marginRight="@dimen/size_2dp"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="@dimen/size_25dp"
            android:background="#e1e1e1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/payment_confirm_title_tv" />

        <TextView
            android:id="@+id/payment_confirm_no_tv"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_50dp"
            android:gravity="center"
            android:text="@string/payment_browser_confirm_no"
            android:textColor="#25b3ff"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/payment_confirm_view2"
            app:layout_constraintTop_toBottomOf="@id/payment_confirm_view1" />

        <View
            android:id="@+id/payment_confirm_view2"
            android:layout_width="@dimen/size_1dp"
            android:layout_height="@dimen/size_47dp"
            android:layout_centerInParent="true"
            android:background="#e1e1e1"
            app:layout_constraintLeft_toRightOf="@id/payment_confirm_no_tv"
            app:layout_constraintRight_toLeftOf="@id/payment_browser_yes_tv"
            app:layout_constraintTop_toBottomOf="@id/payment_confirm_view1" />

        <TextView
            android:id="@+id/payment_browser_yes_tv"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_50dp"
            android:gravity="center"
            android:text="@string/payment_browser_confirm_yes"
            android:textColor="#25b3ff"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/payment_confirm_view2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/payment_confirm_view1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>