<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f6"
    android:fitsSystemWindows="true">

    <!--第一部分：伸缩工具栏-->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:elevation="0dp"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title=""
            app:titleEnabled="false">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:minHeight="46dp"
                app:layout_collapseMode="pin"
                app:title="">

                <RelativeLayout
                    android:id="@+id/asiabill_payment_backfl"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/size_6dp"
                    android:paddingRight="@dimen/size_16dp">

                    <ImageView
                        android:id="@+id/back_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="@mipmap/icon_back" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/paymentsheet_secure_payment"
                    android:textColor="#333333"
                    android:textSize="@dimen/size_18dp"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/size_14dp"
        android:paddingTop="@dimen/size_16dp"
        android:paddingBottom="@dimen/size_20dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/cart_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paymentsheet_your_cart"
            android:textColor="#333333"
            android:textSize="@dimen/size_18dp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sheet_expanded_menu_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/size_14dp"
            android:layout_below="@+id/cart_title"
            android:padding="@dimen/size_8dp" />


        <TextView
            android:id="@+id/select_payment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paymentsheet_select_payment"
            android:textColor="#333333"
            android:layout_below="@+id/sheet_expanded_menu_rl"
            android:layout_marginTop="@dimen/size_10dp"
            android:textSize="@dimen/size_18dp"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/bottom_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingRight="@dimen/size_14dp"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_1dp"
                android:layout_marginTop="@dimen/size_10dp"
                android:layout_marginBottom="@dimen/size_10dp"
                android:background="@color/color_e6eaee" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|left"
                    android:text="@string/paymentsheet_total"
                    android:textColor="#333333"
                    android:textSize="@dimen/size_18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/payment_checkout_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|right"
                    android:text="@string/paymentsheet_total_amount"
                    android:textColor="#333333"
                    android:textSize="@dimen/size_18dp"
                    android:textStyle="bold" />
            </LinearLayout>


            <TextView
                android:id="@+id/payment_error_message_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_9dp"
                android:layout_marginRight="@dimen/size_16dp"
                android:textSize="@dimen/text_size_12sp"
                android:lineSpacingExtra="@dimen/size_2dp"
                android:textColor="@color/mc_color_payment_error_red"/>

            <com.moneycollect.android.ui.view.MoneyCollectButtonView
                android:id="@+id/payment_checkout_btn"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_20dp"
                app:button_height="@dimen/size_56dp"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/select_payment_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/select_payment_title"
            android:layout_above="@+id/bottom_container"
            android:scrollbars="vertical"
            android:fadeScrollbars="false"
            android:scrollbarThumbVertical="@drawable/mc_expand_scroller_thumb_bg"
            android:padding="@dimen/size_8dp" />
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>